feat(notes): adding the notes endpoints